<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>hinc-pom</artifactId>
        <groupId>at.ac.tuwien.dsg.hinc</groupId>
        <version>1.0</version>
    </parent>

    <groupId>at.ac.tuwien.dsg.hinc</groupId>
    <artifactId>global-management-service</artifactId>
    <version>1.0</version>
    <packaging>war</packaging>

    <name>global-management-service</name>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <dependencies>

        
        <dependency>
            <groupId>at.ac.tuwien.dsg.hinc</groupId>                        
            <artifactId>model</artifactId>
            <version>1.0</version>
        </dependency>       
        
        <dependency>
            <groupId>at.ac.tuwien.dsg.hinc</groupId>                        
            <artifactId>common</artifactId>
            <version>1.0</version>
        </dependency>   
        <dependency>
            <groupId>at.ac.tuwien.dsg.hinc</groupId>
            <artifactId>communication</artifactId>
            <version>1.0</version>
        </dependency>
        <!--        <dependency>
            <groupId>at.ac.tuwien.dsg.hinc</groupId>
            <artifactId>collector</artifactId>
            <version>1.0</version>
        </dependency>-->
        <dependency>
            <groupId>at.ac.tuwien.dsg.hinc</groupId>
            <artifactId>repository</artifactId>
            <version>1.0</version>
        </dependency>     
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0</version>
        </dependency>
        
        <!-- CXF for RESTful -->
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>      
            <version>2.0.1</version>      
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>3.1.6</version>                
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http</artifactId>
            <version>3.1.6</version>
        </dependency>
        <dependency> 
            <groupId>org.apache.cxf</groupId> 
            <artifactId>cxf-rt-rs-client</artifactId> 
            <version>3.1.6</version>
        </dependency> 
        
        <!--Spring Framework dependencies--> 
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.0.4.RELEASE</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>4.0.4.RELEASE</version>
        </dependency>
       
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>4.0.4.RELEASE</version>
        </dependency>
        
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-jaxrs</artifactId>     
            <version>1.9.13</version>   
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>1.9.13</version> 
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.13</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-xc</artifactId>
            <version>1.9.13</version>
        </dependency>

        
        
        
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>com.webcohesion.enunciate</groupId>
                <artifactId>enunciate-maven-plugin</artifactId>
                <version>2.3.0</version>
                <configuration>
                    <exports>
                        <java.xml.client.library.binaries>client.jar</java.xml.client.library.binaries>
                    </exports>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.1</version>
                <executions>
                    <execution>
                        <id>tomcat-create-exec-war</id>
                        <goals>
                            <goal>exec-war</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <path>/${project.build.finalName}</path>
                            <systemProperties>
                                <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            
            
        </plugins>
    </build>

</project>
